// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusReducer should handle all defined error types: rejected types STATUS_INFO 1`] = `
Object {
  "result": Object {
    "currentStatus": Object {},
    "error": true,
    "errorMessage": "ERROR",
    "fulfilled": false,
    "pending": false,
  },
  "type": "STATUS_INFO_REJECTED",
}
`;

exports[`StatusReducer should handle all defined fulfilled types: fulfilled types STATUS_INFO 1`] = `
Object {
  "result": Object {
    "currentStatus": Object {
      "test": "success",
    },
    "error": false,
    "errorMessage": "",
    "fulfilled": true,
    "pending": false,
  },
  "type": "STATUS_INFO_FULFILLED",
}
`;

exports[`StatusReducer should handle all defined pending types: pending types STATUS_INFO 1`] = `
Object {
  "result": Object {
    "currentStatus": Object {},
    "error": false,
    "errorMessage": "",
    "fulfilled": false,
    "pending": true,
  },
  "type": "STATUS_INFO_PENDING",
}
`;
